Startup notifications broken when launching an application from nautilus
OS: ArchLinux and Fedora 30
GNOME version: 3.32
When launching an application from nautilus (firefox, gedit, ...), startup notification only ends when you move client window.
After this, it also happens for any launched application.
Edited by Cédric Bellegarde